--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,12 +15,12 @@ jobs:
     - name: Login no Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
     - name: Build 1 da Imagem Docker
       uses: docker/build-push-action@v3
       with:
         context: ./FIxIt.Server
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/projectfixit:latest 
+        tags: ${{ secrets.DOCKER_HUB_PASSWORD }}/projectfixit:latest 
