--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,14 +13,14 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Login no Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        username: ${{ vars.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build 1 da Imagem Docker
       uses: docker/build-push-action@v3
       with:
         context: ./FIxIt.Server
         push: true
-        tags: ${{ secrets.DOCKER_HUB_PASSWORD }}/projectfixit:latest 
+        tags: ${{ vars.DOCKERHUB_USERNAME }}/projectfixit:latest 
