inclui limpeza de cache

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
+    - name: Limpar Cache do Buildx
+      run: docker buildx prune -a -f
 
     - name: Build 1 da Imagem Docker
       uses: docker/build-push-action@v3
