--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,27 +3,27 @@ name: Publish Image Docker
 on:
   push:
     branches: [ main ] 
- # pull_request:
- #   branches: [ "main" ]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive  
 
-    - name: Login no Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ vars.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-    - name: Limpar Cache do Buildx
-      run: docker buildx prune -a -f
+      - name: Login no Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build 1 da Imagem Docker
-      uses: docker/build-push-action@v3
-      with:
-        context: ./FIxIt.Server
-        push: true
-        tags: ${{ vars.DOCKERHUB_USERNAME }}/projectfixit:latest 
+      - name: Limpar Cache do Buildx
+        run: docker buildx prune -a -f
+
+      - name: Build 1 da Imagem Docker
+        uses: docker/build-push-action@v3
+        with:
+          context: ./FIxIt.Server
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/projectfixit:latest
