--- a/FIxIt.Server/Dockerfile
+++ b/FIxIt.Server/Dockerfile
@@ -2,13 +2,14 @@
 FROM node:20 AS with-node
 WORKDIR /app
 COPY fixit.client .  
-WORKDIR /app/fixit.client  
+WORKDIR /app/fixit.client
 RUN npm install
 RUN npm run build  
+
 # Stage 2: Build do backend
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["FIxIt.Server.csproj", "FIxIt.Server/"]  
+COPY ["FIxIt.Server/FIxIt.Server.csproj", "FIxIt.Server/"]  # Corrigido: caminho do csproj
 RUN dotnet restore "FIxIt.Server/FIxIt.Server.csproj"
 COPY . .
 WORKDIR "/src/FIxIt.Server"
