--- a/FIxIt.Server/Dockerfile
+++ b/FIxIt.Server/Dockerfile
@@ -9,7 +9,7 @@ RUN npm run build
 # Stage 2: Build do backend
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["../FIxIt.Server/FIxIt.Server.csproj", "FIxIt.Server/"]
+COPY ["FIxIt.Server/FIxIt.Server.csproj", "FIxIt.Server/"]
 RUN dotnet restore "FIxIt.Server/FIxIt.Server.csproj"
 COPY . .
 WORKDIR "/src/FIxIt.Server"
