--- a/FIxIt.Server/Dockerfile
+++ b/FIxIt.Server/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build do frontend
+# Stage 1: Build frontend
 FROM node:22 AS with-node
 WORKDIR /app
 COPY . .
@@ -6,22 +6,22 @@ WORKDIR /app/fixit.client
 RUN npm install
 RUN npm run build  
 
-# Stage 2: Build do backend
+# Stage 2: Build backend
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["FIxIt.Server/FIxIt.Server.csproj", "FIxIt.Server/"]
-RUN dotnet restore "FIxIt.Server/FIxIt.Server.csproj"
+COPY ["FixIt.Server/FixIt.Server.csproj", "FixIt.Server/"]  
+RUN dotnet restore "FixIt.Server/FixIt.Server.csproj"      
 COPY . .
-WORKDIR "/src/FIxIt.Server"
-RUN dotnet build "FIxIt.Server.csproj" -c Release -o out
+WORKDIR "/src/FixIt.Server"                                 
+RUN dotnet build "FixIt.Server.csproj" -c Release -o out
 
-# Stage 3: Publish do backend
+# Stage 3: Publish backend
 FROM build AS publish
-RUN dotnet publish "FIxIt.Server.csproj" -c Release -o out --self-contained false -p:PublishSingleFile=false
+RUN dotnet publish "FixIt.Server.csproj" -c Release -o out --self-contained false -p:PublishSingleFile=false
 
-# Stage 4: Imagem final
+# Stage 4: Final image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-COPY --from=publish /src/FIxIt.Server/out ./
+COPY --from=publish /src/FixIt.Server/out ./
 COPY --from=with-node /app/fixit.client/dist/fixit.client ./wwwroot  
-ENTRYPOINT ["dotnet", "FIxIt.Server.dll"]
+ENTRYPOINT ["dotnet", "FixIt.Server.dll"]  
