--- a/FIxIt.Server/Dockerfile
+++ b/FIxIt.Server/Dockerfile
@@ -9,8 +9,9 @@ RUN npm run build
 # Stage 2: Build backend
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
+COPY ["FixIt.Server/FIxIt.Server.csproj", "FixIt.Server"]
 COPY . . 
-RUN dotnet restore "FixIt.Server/FixIt.Server.csproj"      
+RUN dotnet restore "./FixIt.Server/FixIt.Server.csproj"      
 COPY . .
 WORKDIR "/src/FixIt.Server"                                 
 RUN dotnet build "FixIt.Server.csproj" -c Release -o out
