--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build 1 da Imagem Docker
         uses: docker/build-push-action@v3
         with:
-          context: ./FIxIt.Server
-          file: ./FIxIt.Server/Dockerfile 
+          context: .
+          file: .Dockerfile 
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/fixit:latest
