--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: .Dockerfile 
+          file: Dockerfile 
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/fixit:latest
