--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,8 @@ jobs:
         with:
           submodules: recursive  
 
-      - name: Listar arquivos
-        run: ls -la
+      - name: Setup buildx
+        uses: docker/setup-buildx-action@v3
         
       - name: Login no Docker Hub
         uses: docker/login-action@v3
